# ibkr-options-analyzer

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  FEATURE_REALTIME_PRICES.md  MIGRATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  SIGNAL_COMPLETE.md  SIGNAL_INTEGRATION.md  SIGNAL_QUICKREF.md  SIGNAL_SETUP.md  USER_GUIDE.md  account_no1_dashboard.html  config.json.example  config.json.minimal  config.json.signal-example  docker-compose.yml  example_usage.sh  findings.md  pnl_breakdown.html  progress.md  requirements.md  setup.sh  start.sh  task_plan.md  test_signal.sh
dashboard/: pyproject.toml
dashboard/app/: config.py  main.py
dashboard/app/api/: accounts.py  analyze.py  import_.py  portfolio.py  positions.py  prices.py  reports.py  strategies.py  trades.py
dashboard/app/frontend/: __init__.py  app.py  callbacks.py  layout.py
dashboard/app/frontend/callbacks/: __init__.py  _data.py  _helpers.py  _ui.py  account_mgmt.py  positions.py  summary.py  summary_subtabs.py  trade_review.py
dashboard/app/models/: account.py  position.py  risk.py  strategy.py
dashboard/app/services/: cli.py  db.py  holdings.py  positions.py  reports.py  screener.py  strategies.py  symbols.py  trade_repo.py  trades.py
dashboard/assets/: style.css
docs/: architecture-review-2026-06-03.md  architecture.md  cli-workflow.md  covered-call-strategy-account-no1-2026-05-25.md  cpp-cli-code-review-intro.md  execution-timeline-summary-2026-05-22.md  margin-wheel-strategy-all-accounts-2026-05-25.md  option-suggestions-us-2026-06-08.md  portfolio-review-account-no1-2026-05-22.md  portfolio-review-account-no1-2026-05-24.md  portfolio-review-account-no1-2026-05-29.md  portfolio-review-account-no1-2026-06-02.md  portfolio-review-account-no1-2026-06-08.md  portfolio-review-account-no2-2026-05-22.md  portfolio-review-account-no2-2026-05-24.md  portfolio-review-account-no2-2026-05-29.md  portfolio-review-account-no2-2026-06-02.md  portfolio-review-account-no2-2026-06-08.md  portfolio-review-account-no3-2026-05-22.md  portfolio-review-account-no3-2026-05-24.md  portfolio-review-account-no3-2026-05-29.md  portfolio-review-account-no3-2026-06-02.md  portfolio-review-account-no3-2026-06-08.md  portfolio-review-three-account-comparison-2026-05-24.md  portfolio-review-three-account-comparison-2026-05-29.md  portfolio-review-winwin-2026-05-22.md  portfolio-review-winwin-2026-05-22.txt  portfolio-review-winwin-2026-05-24.md  position-sizer-guide.md  short-put-strategy.md  weekly-summary-account-no1-2026-06-08.md
docs/superpowers/plans/: 2026-04-30-core-cpp-refactoring-plan.md
docs/superpowers/specs/: 2026-04-23-rest-api-server-design.md  2026-04-28-docker-containerization-design.md  2026-04-28-frontend-dashboard-design.md  2026-04-30-core-cpp-refactoring-design.md  2026-05-09-trade-strategy-review-design.md
examples/: example_signal.cpp
scripts/: requirements.txt  sheets_auth.py  sheets_exporter.py
src/: main.cpp
src/analysis/: risk_calculator.cpp
src/analyzer/: risk_calculator.cpp  strategy_detector.cpp  strategy_detector.hpp
src/cli/: main.cpp
src/cli/commands/: analyze_command.cpp  analyze_command.hpp  download_command.cpp  download_command.hpp  import_command.cpp  import_command.hpp  import_history_command.cpp  import_history_command.hpp  manual_add_command.cpp  manual_add_command.hpp  refresh_command.cpp  refresh_command.hpp  report_command.cpp  report_command.hpp  trades_command.cpp  trades_command.hpp
src/commands/: analyze_command.cpp  analyze_command.hpp  import_command.cpp  manual_add_command.cpp
src/config/: config_manager.cpp  config_manager.hpp
src/core/analysis/: risk_calculator.cpp  risk_calculator.hpp  strategy_detector.cpp  strategy_detector.hpp
src/core/config/: config_manager.cpp  config_manager.hpp
src/core/db/: account_repository.cpp  account_repository.hpp  adjustment_repository.cpp  adjustment_repository.hpp  database.cpp  database.hpp  database_connection.cpp  database_connection.hpp  position_repository.cpp  position_repository.hpp  schema.hpp  trade_repository.cpp  trade_repository.hpp
src/core/flex/: flex_downloader.cpp  flex_downloader.hpp
src/core/parsers/: activity_statement_parser.cpp  activity_statement_parser.hpp  csv_parser.cpp  csv_parser.hpp  option_symbol_parser.cpp  option_symbol_parser.hpp  trade_types.hpp
src/core/report/: csv_exporter.cpp  csv_exporter.hpp  report_generator.cpp  report_generator.hpp
src/core/services/: flex_service.cpp  flex_service.hpp  import_service.cpp  import_service.hpp  portfolio_service.cpp  portfolio_service.hpp  position_service.cpp  position_service.hpp  price_cache_service.cpp  price_cache_service.hpp  price_service.cpp  price_service.hpp  report_service.cpp  report_service.hpp  screener_service.cpp  screener_service.hpp  snapshot_service.cpp  snapshot_service.hpp  strategy_service.cpp  strategy_service.hpp  trade_analytics_service.cpp  trade_analytics_service.hpp  trade_matcher.cpp  trade_matcher.hpp  wheel_cycle_service.cpp  wheel_cycle_service.hpp
src/core/utils/: currency.hpp  http_client.cpp  http_client.hpp  json_output.cpp  json_output.hpp  logger.cpp  logger.hpp  price_fetcher.cpp  price_fetcher.hpp  result.hpp  subprocess.cpp  subprocess.hpp
src/db/: database.hpp  schema.hpp
src/flex/: flex_downloader.cpp
src/parser/: csv_parser.cpp  csv_parser.hpp  option_symbol_parser.cpp
src/report/: csv_exporter.cpp  report_generator.hpp
src/utils/: http_client.cpp  http_client.hpp  logger.cpp  logger.hpp  price_fetcher.cpp  price_fetcher.hpp  signal_notifier.cpp  signal_notifier.hpp
tools/: account_no1_dashboard.py  margin_reduction_plan.py  position_sizer.py  report.py
